--- a/FilRouge2/ResourcesLocalization/fr-FR/Resources.resw
+++ b/FilRouge2/ResourcesLocalization/fr-FR/Resources.resw
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MyTitle.Text" xml:space="preserve">
-    <value />
+  <data name="TitleLegend.Text" xml:space="preserve">
+    <value>Titre</value>
+  </data>
+  <data name="TypeContratLegend.Text" xml:space="preserve">
+    <value>Type de contrat</value>
+  </data>
+  <data name="TypePosteLegend.Text" xml:space="preserve">
+    <value>Type de poste</value>
   </data>
 </root>
